--- a/hw3/styles/style.scss
+++ b/hw3/styles/style.scss
@@ -1,376 +1,375 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
-:root {
-    --light-theme-color: black;
-    --dark-theme-color: white;
+$light-theme-color: black;
+$dark-theme-color: white;
 
-    --light-theme-bg-first: rgb(249, 249, 251);
-    --light-theme-bg-second: rgb(255, 255, 255);
-    --dark-theme-bg-first: rgb(52, 52, 52);
-    --dark-theme-bg-second: rgb(27, 27, 27);
+$light-theme-bg-first: rgb(249, 249, 251);
+$light-theme-bg-second: rgb(255, 255, 255);
 
-    --light-theme-border-color: rgb(205, 205, 205);
-    --dark-theme-border-color: rgb(133, 133, 133);
+$dark-theme-bg-first: rgb(52, 52, 52);
+$dark-theme-bg-second: rgb(27, 27, 27);
 
-    --font-body: "Inter", BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-        "Droid Sans", "Helvetica Neue", sans-serif;
+$light-theme-border-color: rgb(205, 205, 205);
+$dark-theme-border-color: rgb(133, 133, 133);
 
-    --aside-ref-gap: 20px;
-    --header-height: calc(4rem + 1px);
-    --visit-refs-height: 2rem;
-}
+$font-body: "Inter", BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+
+$aside-ref-gap: 20px;
+$header-height: 65px;
+$visit-refs-height: 2rem;
 
 body {
-    font-family: var(--font-body);
-    color: var(--light-theme-color);
+    font-family: $font-body;
+    color: $light-theme-color;
     line-height: 1.75;
 }
-// a:visited {
-//     color: rgb(0, 105, 206);
-// }
+
 .container {
     max-width: 1400px;
     width: 100%;
     margin: 0 auto;
 }
 
-.div_bg-first {
-    background-color: var(--light-theme-bg-first);
-}
-.div_bg-second {
-    background-color: var(--light-theme-bg-second);
-}
-.div_border {
-    border: 1px solid var(--light-theme-border-color);
-}
-.div_border-bottom {
-    border-bottom: 1px solid var(--light-theme-border-color);
-}
-.ref-color-blue-underline {
+
+.ref_color_blue{
     color: rgb(0, 105, 206);
+}
+.ref_decoration_underline {
     text-decoration: underline;
 }
-.ref-bg-gray {
+
+.ref_bg_gray {
     background-color: rgb(242, 241, 241);
 }
 .ref-tag {
     font-size: 0.8rem;
     padding: 0 5px;
 }
-.ref-weight-bold {
+.ref_weight_bold {
     font-weight: bold;
 }
 
 .top-banner {
-    .top-banner__AI-Help {
+    background-color: $light-theme-bg-first;
+
+    &__AI-Help {
+        /* Такая вложенность в CSS превратится в такое ".top-banner .top-banner__ai-help" (вес = 2, вместо 1)  Вместо этого стоит писать так
+          .top-banner {
+             ...
+             &__ai-help {
+             ....
+
+             В таком случае, в CSS вместо & автоматически подставится название родительского класса (top-banner)
+         */
         text-align: center;
         padding: 12px;
         font-size: 1rem;
 
-        .top-banner__AI-Help_color {
+        &_color {
             color: rgb(142, 85, 255);
         }
     }
 }
 
-.header-sticky {
-    position: sticky;
+.body__header-sticky {
+    position: sticky; /* Тут ты явно указываешь позицию, а это та самая "внешняя геометрия""*/
     top: -1px;
     z-index: 1000;
+}
 
-    .header {
-
-        .header-main {
-            height: var(--header-height);
-            font-size: 0.8rem;
-            padding: 10px;
-
-            .header-main__logo {
-                display: flex;
-                align-items: center;
-
-                & a .logo-_,
-                & .logo-m {
-                    fill: #0069c2;
-                }
-
-                & a svg {
-                    height: 1.7rem;
-                }
-            }
-            .header-main__nav {
-                display: flex;
-                width: 100%;
-                justify-content: space-between;
-                gap: 0.5rem;
-                align-items: center;
-
-                .header-main-refs {
-
-                    .header-main-ref {
-                        cursor: pointer;
-                        padding: 10px;
-                        font-size: 0.9rem;
-                        &:hover {
-                            background-color: rgb(255, 215, 222);
-                        }
-                    }
-                    .header-main-ref_beta {
-                        position: relative;
-                        &::after {
-                            content: "BETA";
-                            position: absolute;
-                            top: -7px;
-                            right: -25px;
-                            font-size: 0.5rem;
-                            background-color: rgb(214, 0, 88);
-                            color: var(--dark-theme-color);
-                            padding: 0 3px;
-                            border-radius: 10px;
-                            font-weight: bold;
-                        }
-                    }
-                }
-                .header-main__icons {
-                    display: flex;
-                    align-items: center;
-                    gap: 10px;
-
-                    .header-main__theme {
-                        display: flex;
-                        align-items: center;
-                        gap: 5px;
-                    }
-                    .header-main__search {
-                        border: 1px solid var(--light-theme-border-color);
-                        display: flex;
-                        align-items: center;
-                        padding: 5px;
-                        border-radius: 15px;
-
-                        .search {
-                            border: none;
-                            width: 100%;
-                            position: relative;
-                        }
-                        .search__glass {
-                            cursor: pointer;
-                        }
-                    }
-                    // .header__log-in {
-                    // }
-                    .header-main__sing-up {
-                        .sing-up {
-                            background-color: var(--light-theme-color);
-                            color: var(--dark-theme-color);
-                            font-weight: bold;
-                            padding: 5px 15px 10px 15px;
-                            border-radius: 5px;
-                        }
-                    }
-                }
-            }
-        }
+.header{
+    /*
+        Вообще стоит избегать вложенности где не используется &. В данном случае, header-sticky, header, header-main должны лежать не внутри друг друга а на одном уровне. А уже header-main__logo лежит внутри header-main, но при этом нужно использовать &.
+        Если оставить так, то когда ты будешь использовать header блок в другом месте, стили банально не применятся, поскольку ты явно указал "применить стили для header Только в том случае, когда он лежит внутри header-sticky
+    */
+    background-color: $light-theme-bg-second;
+    border: 1px solid $light-theme-border-color;
+    
+    &_height {
+        height: $header-height;
     }
-    .header__visit-refs {
-        height: var(--visit-refs-height);
-        .visit-refs__refs {
+
+    &-main {
+        display: flex;
+        gap: 10px;
+
+        height: 100%;
+
+        font-size: 0.8rem;
+        padding: 0 10px;
+
+        &__logo {
             display: flex;
-            gap: 20px;
+            align-items: center;
+
+            .logo-line, /*Странное название logo-*/
+            .logo-m {
+                fill: #0069c2;
+            }
+
+            .logo { /* Использовал теги вместо классов */
+                height: 1.7rem;
+            }
+        }
+        &__nav {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            gap: 0.5rem;
+            align-items: center;
+
+            &-btn {
+                display: none;
+            }
+
+        }
+        &-ref {
+            cursor: pointer;
+            padding: 10px;
+            font-size: 0.9rem;
+            &:hover {
+                background-color: rgb(255, 215, 222);
+            }
+        }
+        &-ref_beta {
+            position: relative;
+            &::after {
+                content: "BETA";
+                position: absolute;
+                top: -7px;
+                right: -25px;
+                font-size: 0.5rem;
+                background-color: rgb(214, 0, 88);
+                color: $dark-theme-color;
+                padding: 0 3px;
+                border-radius: 10px;
+                font-weight: bold;
+            }
+        }
+        &__icons {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        &__theme {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        &__search {
+            border: 1px solid $light-theme-border-color;
+            display: flex;
+            align-items: center;
+            padding: 5px;
+            border-radius: 15px;
+
+            .search {
+                border: none;
+                width: 100%;
+                position: relative;
+            }
+            .search__glass {
+                cursor: pointer;
+            }
+        }
+        &__sing-up { 
+
+            .sing-up__button {
+                background-color: $light-theme-color;
+                color: $dark-theme-color;
+                font-weight: bold;
+                padding: 5px 15px 10px 15px;
+                border-radius: 5px;
+            }
         }
     }
 }
+.header__visit-refs {
+    background-color: $light-theme-bg-first;
+    border-bottom: 1px solid $light-theme-border-color;
+    height: $visit-refs-height;
 
-.header__header-main {
-    display: flex;
-    gap: 10px;
+    padding-left: 20px;
+
+    .visit-refs__refs {
+        display: flex;
+        gap: 20px;
+    }
 }
+
 .header-main__header-main-refs {
     display: flex;
     gap: 10px;
 }
 
-.header-main__nav_open {
-    display: none;
-}
-
-main {
-
-    .aside {
-        position: sticky;
-        top: calc(var(--header-height) + var(--visit-refs-height));
-        width: 20%;
-        max-height: 90vh;
-        overflow: auto;
-        padding: 10px;
-
-        display: flex;
-        flex-direction: column;
-        gap: var(--aside-ref-gap);
-
-        .aside__element {
-            display: flex;
-            flex-direction: column;
-            gap: var(--aside-ref-gap);
-            font-size: 0.9rem;
-
-            .aside__details {
-                cursor: pointer;
-            }
-
-            .aside__element-title {
-                font-weight: bold;
-            }
-
-            .aside__ref {
-                cursor: pointer;
-            }
-        }
-    }
-    .main {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-
-        .main__title {
-            font-size: 2.2rem;
-            font-weight: 700;
-        }
-
-        .main__item {
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
-
-            .main__item-title {
-                font-size: 2rem;
-                font-weight: 500;
-            }
-            .main__item-dl {
-                // .main__item-dt {
-                // }
-                .main__item-dd {
-                    padding-left: 20px;
-                }
-            }
-            .main__item-banner {
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
-                padding: 20px;
-
-                background-color: var(--light-theme-bg-first);
-
-                .banner__get-started {
-                    font-weight: 700;
-                }
-                .banner__list-refs {
-                    list-style-type: circle;
-                    padding-left: 30px;
-                }
-            }
-        }
-        
-        .main-highlight {
-            background-color: rgb(242, 241, 241);
-        }
-    }
-    .in-this-article {
-        width: 20%;
-        .in-this-article__refs {
-            display: flex;
-            flex-direction: column;
-
-            .in-this-article__ref {
-                padding: 10px;
-                border-left: 3px solid rgb(205, 205, 205);
-            }
-            .in-this-article__ref_highlight {
-                background-color: rgb(255, 215, 222);
-                border-left: 3px solid rgb(211, 0, 56);
-            }
-        }
-    }
-}
 .wrapper {
     display: flex;
 }
-.wrapper__main {
-    width: 60%;
-    padding: 40px;
+
+.aside {
+    position: sticky;
+    top: calc($header-height + $visit-refs-height);
+    width: 20%;
+    max-height: 90vh;
+    overflow: auto;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    gap: $aside-ref-gap;
+
+    &__element {
+        display: flex;
+        flex-direction: column;
+        gap: $aside-ref-gap;
+        font-size: 0.9rem; 
+    }
+    &__details {
+        cursor: pointer;
+    }
+
+    &__element-title {
+        font-weight: bold;
+    }
+
+    &__ref {
+        cursor: pointer;
+    }
 }
 
-footer {
-    background-color: var(--light-theme-bg-first);
+.main {
+    width: 60%;
+    padding: 40px;
 
-    .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    &__title {
+        font-size: 2.2rem;
+        font-weight: 700;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+    &__item-title {
+        font-size: 2rem;
+        font-weight: 500;
+    }
+    &__item-dd {
+        padding-left: 20px;
+    }
+    &__item-banner {
         display: flex;
         flex-direction: column;
         gap: 20px;
-
         padding: 20px;
 
-        .main {  
-            .main__logo {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
+        background-color: $light-theme-bg-first;
 
-                .main__text {
-                    margin-bottom: 20px;
-                }
-
-                .main__social-icons {
-                    display: flex;
-                    gap: 10px;
-                }
-            }
-            
-            
-            .nav {
-                font-size: 0.8rem;
-
-                .nav__ref {
-                    padding: 5px;
-                }
-            }
+        .banner__get-started {
+            font-weight: 700;
         }
-
-        .moz {
-            border-top: 1px solid var(--light-theme-border-color);
-            padding-top: 20px;
-
-            .moz__nav {
-                display: flex;
-                gap: 15px;
-
-                .moz__ref {
-                    text-decoration: underline;
-                    font-size: 0.7rem;
-                }
-            }
+        .banner__list-refs {
+            list-style-type: circle;
+            padding-left: 30px;
         }
-        .legal {
-            .legal__information {
-                font-size: 0.7rem;
-                .legal__ref {
-                    text-decoration: underline;
-                }
+    }
+    
+    &-highlight {
+        background-color: rgb(242, 241, 241);
+    }
+}
+.in-this-article {
+    width: 20%;
+    
+    position: sticky;
+    top: calc($header-height + $visit-refs-height);
+    
+    &__refs {
+        display: flex;
+        flex-direction: column;
+
+        
+    }
+    &__ref {
+        padding: 10px;
+        border-left: 3px solid rgb(205, 205, 205);
+    }
+    &__ref_highlight {
+        background-color: rgb(255, 215, 222);
+        border-left: 3px solid rgb(211, 0, 56);
+    }
+}
+
+footer {
+    background-color: $light-theme-bg-first;
+}
+.footer {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    padding: 20px;
+
+}
+
+.footer-main {
+    display: flex;
+    justify-content: space-between;
+
+    &__logo {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    &__text {
+        margin-bottom: 20px;
+    }
+
+    &__social-icons {
+        display: flex;
+        gap: 10px;
+    }
+    &__nav {
+        display: flex;
+        flex-direction: column;
+
+        .nav {
+            font-size: 0.8rem;
+        
+            &__ref {
+                padding: 5px;
             }
         }
     }
 }
 
-.footer__main {
-    display: flex;
-    justify-content: space-between;
-}
-.main__nav {
-    display: flex;
-    flex-direction: column;
-}
+.footer-moz {
+    border-top: 1px solid var(--light-theme-border-color);
+    padding-top: 20px;
 
-.footer__moz {
     display: flex;
     gap: 30px;
+
+    &__nav {
+        display: flex;
+        gap: 15px;
+    }
+    &__ref {
+        text-decoration: underline;
+        font-size: 0.7rem;
+    }
+}
+.footer-legal {
+    &__information {
+        font-size: 0.7rem;
+    }
+    &__ref {
+        text-decoration: underline;
+    }
 }
